1) Fixed whitespace at bottom of welcome page. 2) Fixed press condition for configure button. 3) Fixed lack of output of script. 4) Fixed / added test for missing account credentials.

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,6 +1,10 @@
+body, html {
+    background: #d80000;
+}
+
 #container {
     height: 800px;
-    background: #d80000 url("http://static0.twilio.com/packages/twilio-conference/img/twiliocon-2012-bg.png") no-repeat center top;
+    background: url("http://static0.twilio.com/packages/twilio-conference/img/twiliocon-2012-bg.png") no-repeat center top;
 }
 
 #header {
@@ -100,7 +104,6 @@
 }
 
 #content .button:active {
-    padding: 12px 0 8px 0;
     color: #222;
     background-color: #FFF;
     background: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#efefef));
